2017-02-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* "Pop", "copy", "rotate", "move" commands for RPN stack manipulation in qalc
	* Enable both (or one of) RPN stack and syntax with the "rpn" command in qalc

2017-02-17 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix functions with RPN syntax
	* Swap command for RPN stack manipulation in qalc

2017-02-16 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not always reparse expression when parse options have changed
	* Introduce message categories and stages
	* Hide parsing stage messages when only recalculating or angle unit has changed in qalc	

2017-02-15 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix transform last arguments to vector, when only one last argument (fixes function("1+\x"; 1))

2017-02-14 Hanna Knutsson <hanna_k@fmgirl.com>

	* New commands for creation of simple functions and variables (with specified expression) in qalc
	* Do not allow empty names

2017-02-10 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix and increase the size of the list of prime numbers
	* Handle recursive variables (give error and return undefined)
	* Replace ans with ans2 in ans (and ans2 in ans2...) in qalc

2017-02-08 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix set rpn syntax in qalc
	* Fix set command, in qalc, for variables with spaces

2017-01-26 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not raise by exponent numerator larger than 10 000 or smaller than -10 000, when exact exponantiation has failed (fixes slow calculation of for expample 2^0.333333333 in "try exact" mode).

2016-12-13 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not save mode changes in batches file
	* Add 'comma as separator' option to qalc and only show 'dot as separator' when dot is not used as decimal separator

2016-12-11 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use https://www.ecb.europa.eu insead of http://www.ecb.int

2016-11-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Add symbol for Czeck koruna

2016-10-30 Hanna Knutsson <hanna_k@fmgirl.com>
