@@ -1,5 +1,10 @@
 2017-02-18 Hanna Knutsson <hanna_k@fmgirl.com>
 
+	* Add copy register button and modify the behaviour of the swap button
+	* Add buttons for arithmetics next to the RPN stack
+
+2017-02-18 Hanna Knutsson <hanna_k@fmgirl.com>
+
 	* "Pop", "copy", "rotate", "move" commands for RPN stack manipulation in qalc
 	* Enable both (or one of) RPN stack and syntax with the "rpn" command in qalc
 
